various simple code tidying up / findbugs fixes.