@@ -1338,15 +1338,15 @@ public class StdSchedulerFactory implements SchedulerFactory {
                     refName = name;
                 
                 if (params[0].equals(int.class)) {
-                    setMeth.invoke(obj, new Object[]{new Integer(refProps.getIntProperty(refName))});
+                    setMeth.invoke(obj, new Object[]{Integer.valueOf(refProps.getIntProperty(refName))});
                 } else if (params[0].equals(long.class)) {
-                    setMeth.invoke(obj, new Object[]{new Long(refProps.getLongProperty(refName))});
+                    setMeth.invoke(obj, new Object[]{Long.valueOf(refProps.getLongProperty(refName))});
                 } else if (params[0].equals(float.class)) {
-                    setMeth.invoke(obj, new Object[]{new Float(refProps.getFloatProperty(refName))});
+                    setMeth.invoke(obj, new Object[]{Float.valueOf(refProps.getFloatProperty(refName))});
                 } else if (params[0].equals(double.class)) {
-                    setMeth.invoke(obj, new Object[]{new Double(refProps.getDoubleProperty(refName))});
+                    setMeth.invoke(obj, new Object[]{Double.valueOf(refProps.getDoubleProperty(refName))});
                 } else if (params[0].equals(boolean.class)) {
-                    setMeth.invoke(obj, new Object[]{new Boolean(refProps.getBooleanProperty(refName))});
+                    setMeth.invoke(obj, new Object[]{Boolean.valueOf(refProps.getBooleanProperty(refName))});
                 } else if (params[0].equals(String.class)) {
                     setMeth.invoke(obj, new Object[]{refProps.getStringProperty(refName)});
                 } else {
